<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000" >

    <ImageView
        android:id="@+id/icono"
        android:layout_width="wrap_content"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/icono"
        android:gravity="center"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FF4500" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/icono"
        android:layout_alignLeft="@+id/textViewTitulo"
        android:layout_marginLeft="36dp"
        android:text="@string/editNombre"
        android:textColor="#4169E1" />

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewLugar"
        android:layout_alignTop="@+id/textViewLugar"
        android:layout_toRightOf="@+id/textViewLugar"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textViewListItem3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewDirecc"
        android:layout_alignLeft="@+id/textTitulo"
        android:layout_alignTop="@+id/textViewDirecc"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewCiudad"
        android:layout_alignLeft="@+id/textViewListItem3"
        android:layout_alignTop="@+id/textViewCiudad"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textViewListItem4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewUrl"
        android:layout_alignTop="@+id/textViewUrl"
        android:layout_toRightOf="@+id/textViewLugar"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textViewListItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewNombre"
        android:layout_alignLeft="@+id/textTitulo"
        android:layout_alignTop="@+id/textViewNombre"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textViewTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewDirecc"
        android:layout_below="@+id/textViewUrl"
        android:text="@string/telefono"
        android:textColor="#4169E1" />

    <TextView
        android:id="@+id/textViewLugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewNombre"
        android:layout_below="@+id/textViewNombre"
        android:text="@string/tipo"
        android:textColor="#4169E1" />

    <TextView
        android:id="@+id/textViewDirecc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewLugar"
        android:layout_below="@+id/textViewLugar"
        android:text="@string/direccion"
        android:textColor="#4169E1" />

    <TextView
        android:id="@+id/textViewCiudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewDirecc"
        android:layout_below="@+id/textViewDirecc"
        android:text="@string/ciudad"
        android:textColor="#4169E1" />

    <TextView
        android:id="@+id/textViewUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewCiudad"
        android:layout_below="@+id/textViewCiudad"
        android:text="@string/URL"
        android:textColor="#4169E1" />

    <TextView
        android:id="@+id/textViewListItem6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewTel"
        android:layout_alignLeft="@+id/textViewListItem4"
        android:layout_below="@+id/textViewListItem4"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textViewComent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTel"
        android:layout_below="@+id/textViewTel"
        android:text="@string/comentario"
        android:textColor="#4169E1" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewComent"
        android:layout_below="@+id/textViewListItem6"
        android:layout_toRightOf="@+id/textViewComent"
        android:textColor="#ffffff" />

</RelativeLayout>