<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vistas.MainActivity" >

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="54dp"
        android:padding="2dp"
        android:text="@string/osMeus"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/textLugares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textTitulo"
        android:layout_marginRight="44dp"
        android:text="@string/lugares"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="14dp"
        android:layout_marginRight="17dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/siguiente"
        android:onClick="pulsaBoton"
        android:src="@drawable/play4" />

</RelativeLayout>